c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/extra_credit/goto_backwards.c
int main(void) {
    if (0)
    label:
        return 5;
    goto label;
    return 0;
}