c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/extra_credit/parenthesized_label.c
int main(void) {
    goto(a);
a:
    return 0;
}